# mic_speaker

./: sdkconfig
components/config_parameter/: config_parameter.h
components/connect_wifi/: connect_wifi.c
components/mic_stt_local/: CMakeLists.txt  mic_stt_local.c
components/mic_stt_local/include/: mic_stt_local.h
components/mpu6050/: CMakeLists.txt  mpu6050.c
components/speaker/: CMakeLists.txt  speaker.c
components/speaker/include/: speaker.h
main/: CMakeLists.txt  idf_component.yml  main.c  main_v2.c
